Changes to login.html, member-details.html, reports.html

--- a/reports.html
+++ b/reports.html
@@ -99,236 +99,239 @@
 
 		<!--Content-->
 		<div class="container">
-			
-
-            <!-- Search Section -->
-				<div class="row mb-4">
-					<div class="col">
-						<div class="input-group mb-3">
-                            <input
-                                type="text"
-                                class="form-control"
-                                placeholder="First Date"
-                                aria-label="First Date"
-                                aria-describedby="button-addon2"
-                            />
-                            <button
-                                class="btn btn-outline-primary"
-                                type="button"
-                                id="button-addon2"
-                                data-mdb-ripple-color="dark"
-                            >
-                            <i class="fas fa-search"></i>
-                            </button>
-                        </div>
-					</div>
-					<div class="col">
-						<div class="input-group mb-3">
-                            <input
-                                type="text"
-                                class="form-control"
-                                placeholder="Last Date"
-                                aria-label="Last Date"
-                                aria-describedby="button-addon2"
-                            />
-                            <button
-                                class="btn btn-outline-primary"
-                                type="button"
-                                id="button-addon2"
-                                data-mdb-ripple-color="dark"
-                            >
-                            <i class="fas fa-search"></i>
-                            </button>
-                        </div>
-					</div>
-                    <div class="col">
-						<div class="input-group mb-3">
-                            <input
-                                type="text"
-                                class="form-control"
-                                placeholder="Name or NIC"
-                                aria-label="Name or NIC"
-                                aria-describedby="button-addon2"
-                            />
-                            <button
-                                class="btn btn-outline-primary"
-                                type="button"
-                                id="button-addon2"
-                                data-mdb-ripple-color="dark"
-                            >
-                            <i class="fas fa-search"></i>
-                            </button>
-                        </div>
-					</div>
-                    <div class="col">
-						<div class="input-group mb-3">
-                            <input
-                                type="text"
-                                class="form-control"
-                                placeholder="Department"
-                                aria-label="Department"
-                                aria-describedby="button-addon2"
-                            />
-                            <button
-                                class="btn btn-outline-primary"
-                                type="button"
-                                id="button-addon2"
-                                data-mdb-ripple-color="dark"
-                            >
-                            <i class="fas fa-search"></i>
-                            </button>
-                        </div>
-					</div>
-                    <div class="col">
-						<div class="input-group mb-3">
-                            <input
-                                type="text"
-                                class="form-control"
-                                placeholder="Designation"
-                                aria-label="Designation"
-                                aria-describedby="button-addon2"
-                            />
-                            <button
-                                class="btn btn-outline-primary"
-                                type="button"
-                                id="button-addon2"
-                                data-mdb-ripple-color="dark"
-                            >
-                            <i class="fas fa-search"></i>
-                            </button>
-                        </div>
+			<!-- Search Section -->
+			<div class="row mb-4">
+				<div class="col">
+					<div class="input-group mb-3">
+						<input
+							type="text"
+							class="form-control"
+							placeholder="First Date"
+							aria-label="First Date"
+							aria-describedby="button-addon2"
+						/>
+						<button
+							class="btn btn-outline-primary"
+							type="button"
+							id="button-addon2"
+							data-mdb-ripple-color="dark"
+						>
+							<i class="fas fa-search"></i>
+						</button>
 					</div>
 				</div>
-            
+				<div class="col">
+					<div class="input-group mb-3">
+						<input
+							type="text"
+							class="form-control"
+							placeholder="Last Date"
+							aria-label="Last Date"
+							aria-describedby="button-addon2"
+						/>
+						<button
+							class="btn btn-outline-primary"
+							type="button"
+							id="button-addon2"
+							data-mdb-ripple-color="dark"
+						>
+							<i class="fas fa-search"></i>
+						</button>
+					</div>
+				</div>
+				<div class="col">
+					<div class="input-group mb-3">
+						<input
+							type="text"
+							class="form-control"
+							placeholder="Name or NIC"
+							aria-label="Name or NIC"
+							aria-describedby="button-addon2"
+						/>
+						<button
+							class="btn btn-outline-primary"
+							type="button"
+							id="button-addon2"
+							data-mdb-ripple-color="dark"
+						>
+							<i class="fas fa-search"></i>
+						</button>
+					</div>
+				</div>
+				<div class="col">
+					<div class="input-group mb-3">
+						<input
+							type="text"
+							class="form-control"
+							placeholder="Department"
+							aria-label="Department"
+							aria-describedby="button-addon2"
+						/>
+						<button
+							class="btn btn-outline-primary"
+							type="button"
+							id="button-addon2"
+							data-mdb-ripple-color="dark"
+						>
+							<i class="fas fa-search"></i>
+						</button>
+					</div>
+				</div>
+				<div class="col">
+					<div class="input-group mb-3">
+						<input
+							type="text"
+							class="form-control"
+							placeholder="Designation"
+							aria-label="Designation"
+							aria-describedby="button-addon2"
+						/>
+						<button
+							class="btn btn-outline-primary"
+							type="button"
+							id="button-addon2"
+							data-mdb-ripple-color="dark"
+						>
+							<i class="fas fa-search"></i>
+						</button>
+					</div>
+				</div>
+			</div>
 		</div>
 
-        <!--Tables-->
-        <div>
-        <h5 class="text-center">Members</h5>
-        <table class="table mb-5">
-            <thead>
-              <tr>
-                <th scope="col">Name</th>
-                <th scope="col">Date of Birth</th>
-                <th scope="col">Address</th>
-                <th scope="col">Department</th>
-                <th scope="col">Designation</th>
-                <th scope="col">Age</th>
-                <th scope="col">NIC</th>
-                <th scope="col">Gender</th>
-                <th scope="col">Mobile</th>
-                <th scope="col">Date</th>
-                <th scope="col">Time In</th>
-                <th scope="col">Time Out</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <th scope="row">Kasun</th>
-                <td>1997.06.11</td>
-                <td>Mawanella</td>
-                <td>IT</td>
-                <td>IT</td>
-                <td>23</td>
-                <td>976534372V</td>
-                <td>Male</td>
-                <td>0773526547</td>
-                <td>2021.09.21</td>
-                <td>08.21</td>
-                <td>14.02</td>
-              </tr>
-              <tr>
-                <th scope="row">Piyumal</th>
-                <td>1997.06.11</td>
-                <td>Mawanella</td>
-                <td>IT</td>
-                <td>IT</td>
-                <td>23</td>
-                <td>976534372V</td>
-                <td>Male</td>
-                <td>0773526547</td>
-                <td>2021.09.21</td>
-                <td>08.21</td>
-                <td>14.02</td>
-              </tr>
-              <tr>
-                <th scope="row">Nimal</th>
-                <td>1997.06.11</td>
-                <td>Mawanella</td>
-                <td>IT</td>
-                <td>IT</td>
-                <td>23</td>
-                <td>976534372V</td>
-                <td>Male</td>
-                <td>0773526547</td>
-                <td>2021.09.21</td>
-                <td>08.21</td>
-                <td>14.02</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
+		<!--Tables-->
+		<div>
+			<h5 class="text-center">Members</h5>
+			<table class="table mb-5">
+				<thead>
+					<tr>
+						<th scope="col">Name</th>
+						<th scope="col">Date of Birth</th>
+						<th scope="col">Address</th>
+						<th scope="col">Department</th>
+						<th scope="col">Designation</th>
+						<th scope="col">Age</th>
+						<th scope="col">NIC</th>
+						<th scope="col">Gender</th>
+						<th scope="col">Mobile</th>
+						<th scope="col">Date</th>
+						<th scope="col">Time In</th>
+						<th scope="col">Time Out</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<th scope="row">Kasun</th>
+						<td>1997.06.11</td>
+						<td>Mawanella</td>
+						<td>IT</td>
+						<td>IT</td>
+						<td>23</td>
+						<td>976534372V</td>
+						<td>Male</td>
+						<td>0773526547</td>
+						<td>2021.09.21</td>
+						<td>08.21</td>
+						<td>14.02</td>
+					</tr>
+					<tr>
+						<th scope="row">Piyumal</th>
+						<td>1997.06.11</td>
+						<td>Mawanella</td>
+						<td>IT</td>
+						<td>IT</td>
+						<td>23</td>
+						<td>976534372V</td>
+						<td>Male</td>
+						<td>0773526547</td>
+						<td>2021.09.21</td>
+						<td>08.21</td>
+						<td>14.02</td>
+					</tr>
+					<tr>
+						<th scope="row">Nimal</th>
+						<td>1997.06.11</td>
+						<td>Mawanella</td>
+						<td>IT</td>
+						<td>IT</td>
+						<td>23</td>
+						<td>976534372V</td>
+						<td>Male</td>
+						<td>0773526547</td>
+						<td>2021.09.21</td>
+						<td>08.21</td>
+						<td>14.02</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
 
-          <h5 class="text-center">Visitors</h5>
-        <table class="table mb3">
-            <thead>
-              <tr>
-                <th scope="col">Name</th>
-                <th scope="col">NIC</th>
-                <th scope="col">Date of Birth</th>
-                <th scope="col">Age</th>
-                <th scope="col">Address</th>
-                <th scope="col">Gender</th>
-                <th scope="col">Phone</th>
-                <th scope="col">Reason</th>
-                <th scope="col">Date</th>
-                <th scope="col">Time In</th>
-                <th scope="col">Time Out</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <th scope="row">Kasun</th>
-                <td>976534372V</td>
-                <td>1997.06.11</td>
-                <td>23</td>
-                <td>Kegalle</td>
-                <td>Male</td>
-                <td>0773526547</td>
-                <td>To get certificate</td>
-                <td>2021.09.21</td>
-                <td>08.21</td>
-                <td>14.02</td>
-              </tr>
-              <tr>
-                <th scope="row">Kasun</th>
-                <td>976534372V</td>
-                <td>1997.06.11</td>
-                <td>23</td>
-                <td>Kegalle</td>
-                <td>Male</td>
-                <td>0773526547</td>
-                <td>To get certificate</td>
-                <td>2021.09.21</td>
-                <td>08.21</td>
-                <td>14.02</td>
-              </tr>
-              <tr>
-                <th scope="row">Kasun</th>
-                <td>976534372V</td>
-                <td>1997.06.11</td>
-                <td>23</td>
-                <td>Kegalle</td>
-                <td>Male</td>
-                <td>0773526547</td>
-                <td>To get certificate</td>
-                <td>2021.09.21</td>
-                <td>08.21</td>
-                <td>14.02</td>
-              </tr>
-            </tbody>
-          </table>
-        
+		<h5 class="text-center">Visitors</h5>
+		<table class="table mb3">
+			<thead>
+				<tr>
+					<th scope="col">Name</th>
+					<th scope="col">NIC</th>
+					<th scope="col">Date of Birth</th>
+					<th scope="col">Age</th>
+					<th scope="col">Address</th>
+					<th scope="col">Gender</th>
+					<th scope="col">Phone</th>
+					<th scope="col">Reason</th>
+					<th scope="col">Date</th>
+					<th scope="col">Time In</th>
+					<th scope="col">Time Out</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<th scope="row">Kasun</th>
+					<td>976534372V</td>
+					<td>1997.06.11</td>
+					<td>23</td>
+					<td>Kegalle</td>
+					<td>Male</td>
+					<td>0773526547</td>
+					<td>To get certificate</td>
+					<td>2021.09.21</td>
+					<td>08.21</td>
+					<td>14.02</td>
+				</tr>
+				<tr>
+					<th scope="row">Kasun</th>
+					<td>976534372V</td>
+					<td>1997.06.11</td>
+					<td>23</td>
+					<td>Kegalle</td>
+					<td>Male</td>
+					<td>0773526547</td>
+					<td>To get certificate</td>
+					<td>2021.09.21</td>
+					<td>08.21</td>
+					<td>14.02</td>
+				</tr>
+				<tr>
+					<th scope="row">Kasun</th>
+					<td>976534372V</td>
+					<td>1997.06.11</td>
+					<td>23</td>
+					<td>Kegalle</td>
+					<td>Male</td>
+					<td>0773526547</td>
+					<td>To get certificate</td>
+					<td>2021.09.21</td>
+					<td>08.21</td>
+					<td>14.02</td>
+				</tr>
+			</tbody>
+		</table>
+
+		<div class="text-center mb-5">
+			<a href="admin.html"
+				><button type="button" class="btn btn-danger">Log out</button></a
+			>
+		</div>
+
 		<!--Content-->
 
 		<!-- Footer -->
