--- a/member-details.html
+++ b/member-details.html
@@ -83,7 +83,7 @@
 		  <!-- Navbar -->
 		<br />
 		<!-- Content-->
-		<div class="container mb-5">
+		<div class="container mb-3">
 			<div class="row">
 				<div class="col-12">
 					<h2 class="text-center">Member Details </h2>
@@ -143,6 +143,12 @@
 				</div>
 			</div>
 		</div>
+		<div class="text-center mb-5">
+			<a href="login.html"
+				><button type="button" class="btn btn-danger">Log out</button></a
+			>
+		</div>
+
 
 		<!-- Footer -->
 		<footer class="footer text-center text-white fixed-bottom">
