--- a/Member-Details.html
+++ b/Member-Details.html
@@ -110,53 +110,34 @@
 						<tbody > 
 							<tr>
 								<th scope="row">1</th>
-								<td>User Name</td>
-							</tr>
-							<tr>
-								<th scope="row">2</th>
 								<td>Name</td>
 							</tr>
 							<tr>
-								<th scope="row">3</th>
+								<th scope="row">2</th>
 								<td>NIC</td>
 							</tr>
 							<tr>
+								<th scope="row">3</th>
+								<td>Mobile No</td>
+							</tr>
+							<tr>
 								<th scope="row">4</th>
-								<td>Date Of Birth</td>
+								<td>Date</td>
 							</tr>
 							<tr>
 								<th scope="row">5</th>
-								<td>Department</td>
+								<td>Time In</td>
 							</tr>
-							<tr>
-								<th scope="row">6</th>
-								<td>Designation</td>
-							</tr>
-							<tr>
-								<th scope="row">7</th>
-								<td>Age</td>	
-							</tr>
-							<tr>
-								<th scope="row">8</th>
-								<td>Gender</td>						
-							</tr>
-							<tr>
-								<th scope="row">9</th>
-								<td>Address</td>
-							</tr>
-							<tr>
-								<th scope="row">10</th>
-								<td>Email</td>
-							</tr>
-							<tr>
-								<th scope="row">11</th>
-								<td>Mobile No</td>
-							</tr>
+							
 						</tbody>
 					</table>
 				</div>
 			</div>
-		</div>
+			<!-- Button -->
+		<div class="d-grid gap-2 col-6 mx-auto">
+ 			 <button class="btn btn-primary" type="button-1">Click here to checkout</button>
+  		</div>
+	</div>
 
 		<!-- Footer -->
 		<footer class="footer text-center text-white fixed-bottom">
