--- a/visitor-Details.html
+++ b/visitor-Details.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>ATI Kegalle -    Members Details</title>
+		<title>ATI Kegalle -    Visitor Details</title>
 		<!-- Font Awesome -->
 		<link
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
@@ -118,38 +118,32 @@
 							</tr>
 							<tr>
 								<th scope="row">3</th>
-								<td>Reason</td>
+								<td>Phone No</td>
 							</tr>
 							<tr>
 								<th scope="row">4</th>
-								<td>Date Of Birth</td>
+								<td>Reason</td>
 							</tr>
 							<tr>
 								<th scope="row">5</th>
-								<td>Age</td>
+								<td>Date</td>
 							</tr>
 							<tr>
 								<th scope="row">6</th>
-								<td>Gender</td>
+								<td>Time In</td>
 							</tr>
-							<tr>
-								<th scope="row">7</th>
-								<td>Address</td>	
-							</tr>
-							<tr>
-								<th scope="row">8</th>
-								<td>Email</td>						
-							</tr>
-							<tr>
-								<th scope="row">9</th>
-								<td>Mobile</td>
-							</tr>
-							
 						</tbody>
 					</table>
 				</div>
 			</div>
-		</div>
+
+			<!-- Button -->
+		<div class="d-grid gap-2 col-6 mx-auto">
+ 			 <button class="btn btn-primary" type="button">Click here to checkout</button>
+  		</div>
+
+	</div>
+
 
 		<!-- Footer -->
 		<footer class="footer text-center text-white fixed-bottom">
