Linked add-content.html to reports.html

--- a/reports.html
+++ b/reports.html
@@ -104,7 +104,7 @@
 				<div class="col">
 					<div class="input-group mb-3">
 						<input
-							type="text"
+							type="date"
 							class="form-control"
 							placeholder="First Date"
 							aria-label="First Date"
@@ -123,7 +123,7 @@
 				<div class="col">
 					<div class="input-group mb-3">
 						<input
-							type="text"
+							type="date"
 							class="form-control"
 							placeholder="Last Date"
 							aria-label="Last Date"
@@ -329,6 +329,10 @@
 		<div class="text-center mb-5">
 			<a href="admin.html"
 				><button type="button" class="btn btn-danger">Log out</button></a
+			>
+
+			<a href="add-content.html"
+				><button type="button" class="btn btn-primary">Edit Content</button></a
 			>
 		</div>
 
