--- a/visitor-enter.html
+++ b/visitor-enter.html
@@ -105,7 +105,6 @@
 				</div>
 				<h3 class="text-whitesmoke mb-4">Enter as a Visitor</h3>
 				<form>
-
 					<div class="col d-flex justify-content-center">
 						<!-- NIC input -->
 						<div class="form-outline mb-4">
@@ -114,77 +113,15 @@
 						</div>
 					</div>
 					<!-- Submit button -->
-					<button type="submit" class="btn btn-light mb-3"><i class="fas fa-search"></i></button>
+					<button type="submit" class="btn btn-light mb-3">
+						<i class="fas fa-search"></i>
+					</button>
 
 					<div class="col d-flex justify-content-center">
 						<!-- Name input -->
 						<div class="form-outline mb-4">
 							<input type="text" id="form1Example2" class="form-control" />
 							<label class="form-label" for="form1Example2">Name</label>
-						</div>
-					</div>
-					
-
-					<div class="col d-flex justify-content-center">
-						<!-- Email input -->
-						<div class="form-outline mb-4">
-							<input type="text" id="form1Example2" class="form-control" />
-							<label class="form-label" for="form1Example2">Email</label>
-						</div>
-					</div>
-
-					<div class="col d-flex justify-content-center">
-						<!-- DOB input -->
-						<div class="form-outline mb-4">
-							<input type="text" id="form1Example2" class="form-control" />
-							<label class="form-label" for="form1Example2"
-								>Date of Birth</label
-							>
-						</div>
-					</div>
-
-					<div class="col d-flex justify-content-center">
-						<!-- Age input -->
-						<div class="form-outline mb-4">
-							<input type="text" id="form1Example2" class="form-control" />
-							<label class="form-label" for="form1Example2">Age</label>
-						</div>
-					</div>
-
-					<div class="col d-flex justify-content-center">
-						<!-- Address input -->
-						<div class="form-outline mb-4">
-							<input type="text" id="form1Example2" class="form-control" />
-							<label class="form-label" for="form1Example2">Adress</label>
-						</div>
-					</div>
-					<div class="col d-flex justify-content-center">
-						<!-- Gender select-->
-						<div class="mb-4">
-							<label class="form-label" for="form6Example5">Gender</label>
-							<select>
-								<option value="" disabled selected>Choose your option</option>
-								<option value="1">Male</option>
-								<option value="2">Female</option>
-							</select>
-						</div>
-					</div>
-
-					<div class="col d-flex justify-content-center">
-						<!-- Mobile number input -->
-						<div class="form-outline mb-4">
-							<input type="number" id="form1Example1" class="form-control" />
-							<label class="form-label" for="form1Example1"
-								>Mobile number</label
-							>
-						</div>
-					</div>
-
-					<div class="col d-flex justify-content-center">
-						<!-- Reason input -->
-						<div class="form-outline mb-4">
-							<input type="text" id="form1Example2" class="form-control" />
-							<label class="form-label" for="form1Example2">Reason</label>
 						</div>
 					</div>
 
@@ -199,7 +136,11 @@
 					</div>
 
 					<!-- Submit button -->
-					<button type="submit" class="btn btn-primary mb-3">Submit</button>
+					<a href="visitor-details.html"
+						><button type="button" class="btn btn-primary mb-3">
+							Submit
+						</button></a
+					>
 				</form>
 			</div>
 		</div>
