--- a/visitor-enter.html
+++ b/visitor-enter.html
@@ -109,7 +109,7 @@
 						<!-- NIC input -->
 						<div class="form-outline mb-4">
 							<input type="text" id="form1Example2" class="form-control" />
-							<label class="form-label" for="form1Example2">NIC</label>
+							<label class="form-label" for="form1Example2">Name</label>
 						</div>
 					</div>
 					<!-- Submit button -->
@@ -121,7 +121,7 @@
 						<!-- Name input -->
 						<div class="form-outline mb-4">
 							<input type="text" id="form1Example2" class="form-control" />
-							<label class="form-label" for="form1Example2">Name</label>
+							<label class="form-label" for="form1Example2">Password</label>
 						</div>
 					</div>
 
